<resources>
    <string name="app_name">EatSafe</string>
    <string name="welcome_eatsafe" translatable="false">Welcome to EatSafe</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account_yet">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="already_account">Already have an account?</string>
    <string name="send_email">Send email</string>
    <string name="save">Save</string>
    <string name="signup_button">Sign up</string>
    <string name="email">E-mail</string>
    <string name="user_full_name">Your name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_city">Current city</string>
    <string name="forgot_password_info">Enter your email associated with your account and we will email you a link to reset your password.</string>
    <string name="forgot_password_email_sent">Forgot password email sent.</string>
    <string name="intolerances">Intolerances</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="personal_details_header">Personal Details</string>
    <string name="add_review_header">Add a review</string>
    <string name="add_review_placeholder">Describe your experience with this establishment between 20 word and 100 words.</string>
    <string name="add_review_description_header">Description</string>
    <string name="rating_label">Rating</string>
    <string name="safety_label">Safety</string>
    <string name="favorites_header">Favorites</string>
    <string name="search_hint">Search…</string>
    <string name="generic_error">An error has occurred.</string>
    <string name="review_saved_successfully">Review saved successfully</string>
    <string name="error_save_review">Could not save review, please try again</string>
    <string name="no_elements_yet">There are no elements yet</string>
    <string name="no_favorites_yet">There are no favorites yet, start exploring!</string>
    <string name="no_reviews_yet">There are no reviews yet, share your experience!</string>
    <string name="my_reviews_header">My Reviews</string>
    <string name="no_allergens_yet">No allergens yet</string>
    <string name="reviews_header">Reviews</string>
    <string name="ratings_header">"Ratings: "</string>
    <string name="loading_label">Loading…</string>
    <string name="empty_search_results">No Results Found! Please try different criteria</string>
</resources>