package edu.uoc.avalldeperas.eatsafe.common

object ComponentTagsConstants {
    const val FORGOT_PASSWORD_INFO = "forgot-password-info"

    const val CIRCULAR_PROGRESS_TAG = "circular-progress-tag"
    const val GOOGLE_MAP_VIEW = "google-map-view"
    const val SEARCH_BAR_EXPLORE = "search-bar-explore"

    const val PLACE_ITEM = "place-item-"
    const val ADD_REVIEW_DESCRIPTION_FIELD = "add-review-description-field"
    const val RATING_ITEM_AVG_SAFETY = "rating-item-avg-safety"
    const val RATING_ITEM_AVG_RATING = "rating-item-avg-rating"
    const val RATING_ITEM_TOTAL_REVIEWS = "rating-item-total-reviews"
    const val PLACE_INFO_ELEMENT = "place-info-element-"
}
