...
            BottomNavigationItem(
                label = "Explore",
                icon = Icons.Outlined.Explore,
                route = Screen.ExploreMap.route
            ),
            BottomNavigationItem(
                label = "Favorite",
                icon = Icons.Filled.Favorite,
                route = Screen.Favorites.route
            ),
            BottomNavigationItem(
                label = "Profile",
                icon = Icons.Filled.AccountCircle,
...
