...
        modifier = modifier
            .fillMaxWidth()
            .padding(start = 24.dp, top = 16.dp),
        verticalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        Text(
            text = "About",
            fontWeight = FontWeight.Bold,
            fontSize = 20.sp
        )
        InfoElement(
            imageVector = Icons.Filled.Phone,
            text = place.telephone
...
